@@ -15,4 +15,5 @@ dist_bin_SCRIPTS = \
 	difxspeed \
 	oms2v2d \
 	calc2xyz \
-	vlog
+	vlog \
+	mk62v2d
